hphp/test/zend/good/ext/openssl/tests/bug39217.php.skipif
<?hh 
if (!extension_loaded("openssl")) die("skip");
