hphp/test/zend/bad/ext/openssl/tests/bug54992.php.skipif
<?php 
if (!extension_loaded("openssl")) die("skip");
if (!function_exists('pcntl_fork')) die("skip no fork");